account creation func

--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,6 @@
     user: "root",
     password: "",
     database: "gorulagbe", 
-    connectionLimit: 10
+    port: 3306,
+    secret_key: "youknowwhy"
 }
